infrastructure/helm-installs/ngf/local/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-gateway
  labels:
    toolkit.fluxcd.io/tenant: infra
