infrastructure/helm-installs/ngf/local/gateway-dkroesen.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-dkroesen
  namespace: nginx-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "echo1.local.dkroesen.nl"
    - name: http-auth
      port: 80
      protocol: HTTP
      hostname: "auth.local.dkroesen.nl"
